# creator-follower

./: .gitignore  LICENSE  README.md  docker-compose.yml
api-tests/: file  test.sh
cf-server/: .env  CF-SERVER-README.md  Cargo.toml  Dockerfile  creator-follower.db-shm  creator-follower.db-wal  package-lock.json
cf-server/graphql_schemas/: search-query.graphql  staff-media-paginated.graphql  staff-media-query.graphql
cf-server/migrations/: 20220620210112_initial.sql
cf-server/src/: clients.rs  errors.rs  main.rs
cf-server/src/routes/: anilist_routes.rs  mod.rs  page_routes.rs
cf-server/static/: index.html
cf-server/static/css/: index.css
cf-server/templates/: base.html  index.html  search_bar.html  search_results.html
nginx/: nginx.conf
nginx/conf/: nginx.conf
