[package]
name = "cf-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"]}
sqlx = { version = "0.5.13", features=["sqlite", "runtime-actix-rustls"]}
pretty_env_logger = "0.4"
rss = "2.0"
reqwest = { version = "0.11", features = ["json"] }
graphql_client = "0.10.0"
derive_more = "0.99.17"
